fix bug tombol whatsapp di kanan dan menghilangkan gap putih di sekeliling konten

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,12 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: clip;
 }
 
 body {
   font-family: 'Inter', sans-serif;
   font-weight: 400;
-  padding-top: 85px;
 }
 
 h1 {
